dark mode hover fix

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -60,6 +60,11 @@ body {
     color: black;
     background-color: white;
 }
+.darkmodebutton:hover {
+    background-color: rgb(218, 218, 218);
+    border-color: rgb(218, 218, 218);
+    cursor: pointer;
+}
 
 /*HOME PAGE*/
 
